# CubedPotatoBrowser

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: renovate.json
benchmarks/: benchmark_chromium_vs_potato.sh  chromium_mem.txt  potato_mem.txt
cef/src/: args.rs  library_loader.rs
cef/src/bindings/: aarch64_pc_windows_msvc.rs  arm_unknown_linux_gnueabi.rs  i686_pc_windows_msvc.rs  x86_64_apple_darwin.rs
download-cef/: Cargo.toml
download-cef/src/: lib.rs
export-cef-dir/src/: main.rs
src/: lib.rs  main.rs  sandbox.rs
src/assets/: scriptlets.js
src/assets/filters/: youtube_and_google.txt
src/assets/scripts/command_bar/: command_bar.js
src/assets/scripts/overlay/: hint_overlay.js  remove_overlay.js
src/browser/: client.rs  keybinds.rs  launch.rs  mod.rs  view.rs  window.rs
src/constants/: key_codes.rs  mod.rs
src/handlers/: app.rs  browser_process.rs  keyboard.rs  lifespan_handler.rs  load.rs  mod.rs  render_process.rs  request.rs  resource_request.rs
src/utils/: adblock.rs  infer_request_type.rs  mod.rs  spawn_task.rs  string.rs
sys/src/bindings/: aarch64_apple_darwin.rs  aarch64_pc_windows_msvc.rs  aarch64_unknown_linux_gnu.rs  arm_unknown_linux_gnueabi.rs  i686_pc_windows_msvc.rs  x86_64_unknown_linux_gnu.rs
update-bindings/src/: main.rs  parse_tree.rs  upgrade.rs
