[package]
name = "potato-browser"
version = "0.1.0"
edition = "2021"
authors = ["Niels Savvides <niels.i.savvides@gmail.com>"]
license = "MIT"
repository = "https://github.com/nielssav/potato-browser"

[dependencies]
cef = { path = "cef" }
cef-dll-sys = { path = "sys" }
adblock = "0.10.1"
regex = "1"
log = "0.4"
env_logger = "0.10"

[workspace]
resolver = "2"
members = ["download-cef", "update-bindings", "export-cef-dir", "sys", "cef"]

[workspace.package]
version = "137.0.0+137.0.8"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Niels Savvides <niels.i.savvides@gmail.com>"]
repository = "https://github.com/tauri-apps/cef-rs"

[workspace.dependencies]
cef-dll-sys = { version = "137.0.0", path = "sys" }
download-cef = { version = "1.4", path = "download-cef" }

anyhow = "1"
bindgen = "0.72"
clap = { version = "4", features = ["derive"] }
cmake = "0.1"
convert_case = "0.8"
plist = "1"
proc-macro2 = "1"
quote = "1"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"

[workspace.dependencies.windows-sys]
version = "0.60"
features = ["Win32_System_Environment", "Win32_System_LibraryLoader"]
